Put proper <developers> on pom.xml files

--- a/pom.xml
+++ b/pom.xml
@@ -70,4 +70,13 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <developers>
+    <developer>
+      <id>tmortagne</id>
+      <name>Thomas Mortagne</name>
+      <email>thomas.mortagne at xwiki.com</email>
+      <timezone>+1</timezone>
+    </developer>
+  </developers>
 </project>
