--- a/pom.xml
+++ b/pom.xml
@@ -23,17 +23,18 @@
 -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
     <artifactId>xwiki-platform-core</artifactId>
     <version>3.5.1</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.xwiki.authentication</groupId>
-  <artifactId>xwiki-authentication-trusted-ldap</artifactId>
-  <name>xwiki-authentication-trusted-ldap</name>
+
+  <groupId>org.xwiki.contrib.authentication</groupId>
+  <artifactId>xwiki-authenticator-trusted-ldap</artifactId>
+  <name>XWiki Authenticator Trusted LDAP</name>
   <version>1.0-SNAPSHOT</version>
-  <description>XWiki SSO authentication based servlet/portlet api and LDAP</description>
+  <description>Support SAAS remote user based SSO authentication and get informations from LDAP server</description>
   <properties>
     <!-- Too lazy to fix them right now. -->
     <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
@@ -79,4 +80,18 @@
       <timezone>+1</timezone>
     </developer>
   </developers>
+
+  <scm>
+    <connection>scm:git:git://github.com/xwiki-contrib/xwiki-authenticator-trusted-ldap.git</connection>
+    <developerConnection>scm:git:git@github.com:xwiki-contrib/xwiki-authenticator-trusted-ldap.git</developerConnection>
+    <url>https://github.com/xwiki-contrib/xwiki-authenticator-trusted-ldap</url>
+    <tag>HEAD</tag>
+  </scm>
+  <distributionManagement>
+    <repository>
+      <id>xwiki-staging</id>
+      <name>XWiki Staging Repository</name>
+      <url>http://nexus.xwiki.org/nexus/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
 </project>
