--- a/pom.xml
+++ b/pom.xml
@@ -26,23 +26,25 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-core</artifactId>
-    <version>3.5.1</version>
+    <artifactId>xwiki-core-parent</artifactId>
+    <version>2.6</version>
   </parent>
 
   <groupId>org.xwiki.contrib.authentication</groupId>
   <artifactId>xwiki-authenticator-trusted-ldap</artifactId>
   <name>XWiki Authenticator Trusted LDAP</name>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1-2.6-SNAPSHOT</version>
   <description>Support JAAS remote user based SSO authentication and get informations from LDAP server</description>
   <properties>
     <!-- Too lazy to fix them right now. -->
     <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
+    <platform.version>2.6</platform.version>
+    <xwiki.clirr.skip>true</xwiki.clirr.skip>
   </properties>
   <dependencies>
     <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-oldcore</artifactId>
+      <groupId>com.xpn.xwiki.platform</groupId>
+      <artifactId>xwiki-core</artifactId>
       <version>${platform.version}</version>
       <scope>provided</scope>
     </dependency>
@@ -52,7 +54,7 @@
     </dependency>
  
      <!-- Tests -->
-    <dependency>
+    <!-- <dependency>
       <groupId>org.jmock</groupId>
       <artifactId>jmock-legacy</artifactId>
       <scope>test</scope>
@@ -69,7 +71,7 @@
       <version>${platform.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
-    </dependency>
+    </dependency> -->
   </dependencies>
 
   <developers>
