[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
   <groupId>org.xwiki.contrib.authentication</groupId>
   <artifactId>xwiki-authenticator-trusted-ldap</artifactId>
   <name>XWiki Authenticator Trusted LDAP</name>
-  <version>1.1-2.6</version>
+  <version>1.2-2.6-SNAPSHOT</version>
   <description>Support JAAS remote user based SSO authentication and get informations from LDAP server</description>
   <properties>
     <!-- Too lazy to fix them right now. -->
@@ -87,7 +87,7 @@
     <connection>scm:git:git://github.com/xwiki-contrib/xwiki-authenticator-trusted-ldap.git</connection>
     <developerConnection>scm:git:git@github.com:xwiki-contrib/xwiki-authenticator-trusted-ldap.git</developerConnection>
     <url>https://github.com/xwiki-contrib/xwiki-authenticator-trusted-ldap/tree/master/xwiki26</url>
-    <tag>xwiki-authenticator-trusted-ldap-1.1-2.6</tag>
+    <tag>xwiki26</tag>
   </scm>
   <distributionManagement>
     <repository>
