--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-core</artifactId>
-    <version>3.5.1</version>
+    <groupId>org.xwiki.commons</groupId>
+    <artifactId>xwiki-commons</artifactId>
+    <version>3.2</version>
   </parent>
 
   <groupId>org.xwiki.contrib.authentication</groupId>
@@ -38,6 +38,7 @@
   <properties>
     <!-- Too lazy to fix them right now. -->
     <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
+    <platform.version>${commons.version}</platform.version>
   </properties>
   <dependencies>
     <dependency>
